--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Work in progress</h1>
+<h1>Hi, I'm Janella Co</h1>
+<p>I'm a Software Engineer, based in Tampa, FL.</p>
 </body>
 </html>
